k8s/jokes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jokemeter-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: jokemeter
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33% 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jokemeter
    spec:
      containers:
      - name: jokemeter
        image: peterwolf/jokemeter:lr 
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /api/v1/startup
            port: 80
        readinessProbe:
          httpGet:
            path: /api/v1/ready
            port: 80
          initialDelaySeconds: 1  
          periodSeconds: 10
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 80
          initialDelaySeconds: 1
          failureThreshold: 2
          periodSeconds: 10
