k8s/jokemeter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jokemeter-svc
spec:
  selector:
    app: jokemeter
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
