k8s/jokemeter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jokemeter-ingress
spec:
  rules:
   - host: jokemeter.ai 
     http:
        paths:
        - pathType: Exact
          path: /api/v1/ready
          backend:
            service:
              name: jokemeter-svc
              port:
                number: 80
        - pathType: Exact
          path: /api/v1/health
          backend:
            service:
              name: jokemeter-svc
              port:
                number: 80
        - pathType: Exact
          path: /api/v1/version
          backend:
            service:
              name: jokemeter-svc
              port:
                number: 80
        - pathType: Exact
          path: /api/v1/predict
          backend:
            service:
              name: jokemeter-svc
              port:
                number: 80
